--- a/photos/templates/photos/add_photos_to_album.html
+++ b/photos/templates/photos/add_photos_to_album.html
@@ -5,36 +5,37 @@
 {% block body %}
 <div class="bg-base-100">
   <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-20 lg:max-w-7xl lg:px-8">
-    <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
 
-  <!-- {% if existing_photos %}
-    {% for photo in existing_photos %}
-      <a class="group">
-        <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
-          <img src="{{photo.image.url}}" alt="{{ photo.pk }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
+    <!-- {% if existing_photos %}
+      {% for photo in existing_photos %}
+        <a class="group">
+          <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-h-8 xl:aspect-w-7">
+            <img src="{{photo.image.url}}" alt="{{ photo.pk }}" class="h-full w-full object-cover object-center group-hover:opacity-75">
+          </div>
+        </a>
+      {% endfor %}
+    {% else %}
+        <div class="prose prose-sm md:prose-base">
+          <h1>Your photo album is empty..!</h1>
         </div>
-      </a>
-    {% endfor %}
-  {% else %}
-      <div class="prose prose-sm md:prose-base">
-        <h1>Your photo album is empty..!</h1>
+    {% endif %} -->
+
+      <div class="rounded-lg bg-base-200 p-8 shadow-lg lg:p-12"">
+        <form method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+
+
+          <label for="images" class="text-2xl font-bold tracking-tight">Upload new photos:</label>
+          <input type="file" name="images" required multiple class="mt-6 block file-input file-input-bordered file-input-primary w-full max-w-xs">
+
+
+          <div class="block mt-6 space-x-4">
+            <button class="btn btn-primary" type="submit">Add Photos</button>
+            <a href="{% url 'albums:album_detail' album.pk %}" class="btn btn-neutral">Back</a>
+          </div>
+        </form>
       </div>
-  {% endif %} -->
 
-
-      <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-
-
-        <label for="images" class="text-2xl font-bold tracking-tight">Upload new photos:</label>
-        <input type="file" name="images" required multiple class="mt-4 block file-input file-input-bordered w-full max-w-xs">
-
-
-        <div class="block mt-10 space-x-4">
-          <button class="btn btn-primary" type="submit">Add Photos</button>
-          <a href="{% url 'albums:album_detail' album.pk %}" class="btn btn-neutral">Back</a>
-        </div>
-      </form>
     </div>
   </div>
 
