--- a/access/templates/access/album_access.html
+++ b/access/templates/access/album_access.html
@@ -16,7 +16,7 @@
     <section>
       <form  method="POST">
         {% csrf_token %}
-        <div class="mt-4 block py-8 space-y-4 w-full max-w-sm rounded-lg bg-base-200 p-8 shadow-lg lg:p-12">
+        <div class="mt-4 block space-y-4 w-full max-w-lg rounded-lg bg-base-200 p-6 shadow-lg lg:p-12">
           <div class="flex gap-4 prose">
             <h2 class="mb-4">Edit your album infos</h2>
             <svg viewBox="0 0 24 24" class="fill-transparent stroke-current stroke-2 h-8 w-8"  xmlns="http://www.w3.org/2000/svg">
@@ -29,21 +29,13 @@
               {{field}}
             </div>
           {% endfor %}
-          <div class="flex gap-4">
             <input type="submit" name="album_form" class="block btn btn-primary text-white" value="Save changes">
-            <a href="{% url 'albums:album_delete' album.pk %}" class="btn btn-outline btn-error">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="h-5 w-5">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"/>
-              </svg>
-              <!-- Delete album -->
-            </a>
-          </div>
         </div>
       </form>
 
     </section>
 
-    <section class="my-8" >
+    <section class="my-8 max-w-lg" >
       <a name="access_control"></a>
       <div class="flex gap-4 prose">
         <h2 class="mb-4">Control who can access your album</h2>
@@ -56,7 +48,7 @@
       </div>
       <form method="POST">
         {% csrf_token %}
-        <div class="overflow-x-auto">
+        <div class="overflow-x-auto rounded-lg">
           <table class="table">
 
             <thead>
@@ -102,23 +94,23 @@
             </tbody>
           </table>
         </div>
-        <div class="btn btn-outline btn-error mt-6">
+        <button class="btn btn-outline btn-error mt-6" type="submit" name="revoke_access_form">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M18.364 18.364A9 9 0 005.636 5.636m12.728 12.728A9 9 0 015.636 5.636m12.728 12.728L5.636 5.636" />
           </svg>
-          <input type="submit" name="revoke_access_form" class=" " value="Revoke access">
-        </div>
+          Revoke access
+        </button>
       </form>
     </section>
 
     {% if relations|length != users_with_access|length %}
-    <section class="my-8">
+    <section class="my-8 max-w-lg">
       <div class="prose">
         <h3 class="mb-4">Grant Access to :</h3>
       </div>
       <form method="POST">
         {% csrf_token %}
-        <div class="overflow-x-auto">
+        <div class="overflow-x-auto rounded-lg">
           <table class="table">
             <thead>
               <tr class="bg-red-300/30 text-red-700">
@@ -161,18 +153,25 @@
             </tbody>
           </table>
         </div>
-        <div class="mt-6 btn btn-outline btn-success">
+        <button class="mt-6 btn btn-outline btn-success" type="submit" name="add_access_form" value="Apply changes">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 01-1.043 3.296 3.745 3.745 0 01-3.296 1.043A3.745 3.745 0 0112 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 01-3.296-1.043 3.745 3.745 0 01-1.043-3.296A3.745 3.745 0 013 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 011.043-3.296 3.746 3.746 0 013.296-1.043A3.746 3.746 0 0112 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 013.296 1.043 3.746 3.746 0 011.043 3.296A3.745 3.745 0 0121 12z" />
           </svg>
-          <input type="submit" name="add_access_form" value="Apply changes">
-        </div>
+          Apply changes
+        </button>
       </form>
     </section>
     {% endif %}
 
-    <div>
+    <hr>
+    <div class="mt-10 flex gap-4">
       <a href="{% url 'albums:album_detail' album.pk %}" class="btn btn-neutral">Back</a>
+      <a href="{% url 'albums:album_delete' album.pk %}" class="btn btn-outline btn-error">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="h-5 w-5">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"/>
+        </svg>
+        Delete album
+      </a>
     </div>
   </div>
 </div>
