--- a/albums/templates/albums/album_form.html
+++ b/albums/templates/albums/album_form.html
@@ -20,13 +20,19 @@
             </div>
             {% endfor %}
           </div>
-
+          <div class="hidden textarea-bordered"></div> <!-- to add missing tailwind styling-->
           <div class="mt-4">
               <label for="images" class="text-xl font-bold tracking-tight">Upload photos:</label>
               <input type="file" name="images" multiple class="mt-4 block file-input file-input-bordered file-input-primary w-full max-w-xs">
               <div class="flex gap-4 mt-8">
-                <button type="submit" class="inline-block btn btn-primary">Save</button>
-                <a href="{% url 'albums:albums_view' %}" class="btn btn-default">Back</a>
+                <a href="{% url 'albums:albums_view' %}" class="btn btn-neutral">
+                  <svg class="w-6 h-6 stroke-2 fill-current" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M224 480h640a32 32 0 1 1 0 64H224a32 32 0 0 1 0-64z"></path>
+                    <path d="m237.248 512 265.408 265.344a32 32 0 0 1-45.312 45.312l-288-288a32 32 0 0 1 0-45.312l288-288a32 32 0 1 1 45.312 45.312L237.248 512z"></path>
+                  </svg>
+                  Back
+                </a>
+                <button type="submit" class="inline-block btn btn-primary text-white">Save</button>
               </div>
           </div>
         </form>
