--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -7,14 +7,14 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}{% endblock title %} | Family Book </title>
+  <title>{% block title %}{% endblock title %} | æternam </title>
 </head>
 
 <body class="bg-base-100 h-full">
   <header>
     <div class="navbar bg-base-100 shadow-md">
       <div class="flex-1">
-        <a href="/" class="btn btn-ghost normal-case text-xl">Family Book</a>
+        <a href="/" class="btn btn-ghost normal-case text-2xl"><span class="font-normal text-5xl mb-2 -mr-2">æ</span>ternam</a>
       </div>
       {% if request.user.is_authenticated %}
       <div class="flex-none">
