--- a/albums/templates/albums/album_confirm_delete.html
+++ b/albums/templates/albums/album_confirm_delete.html
@@ -8,8 +8,6 @@
   <div class="prose prose-sm md:prose-base text-center">
     <h2>Delete the Album "{{album.title}}" ?</h2>
 
-
-
     <div class="mt-3 flex -space-x-8 overflow-hidden">
       {% for photo in album_photos %}
       {% thumbnail photo.image "600x600" crop="center" as im %}
@@ -18,7 +16,7 @@
       {% endfor %}
     </div>
     <div class="mt-3 font-medium">
-      <a>+ {{rest}} other{{rest|pluralize}}</a>
+      <a>{% if rest > 0 %}+ {{rest}} other{{rest|pluralize}}{% endif %}</a>
     </div>
 
     <br>
